@@ -1,7 +1,7 @@
 /* gbpst.c */
 
 /*
- *  Copyright (C) 1989-2009  Alan R. Baldwin
+ *  Copyright (C) 1989-2021  Alan R. Baldwin
  *
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -47,7 +47,8 @@ struct  mne     mne[] = {
     {   NULL,   ".title",       S_HEADER,       0,      O_TITLE },
     {   NULL,   ".sbttl",       S_HEADER,       0,      O_SBTTL },
     {   NULL,   ".module",      S_MODUL,        0,      0       },
-    {   NULL,   ".include",     S_INCL,         0,      0       },
+    {   NULL,   ".include",     S_INCL,         0,      I_CODE  },
+    {   NULL,   ".incbin",      S_INCL,         0,      I_BNRY  },
     {   NULL,   ".area",        S_AREA,         0,      0       },
     {   NULL,   ".org",         S_ORG,          0,      0       },
     {   NULL,   ".radix",       S_RADIX,        0,      0       },
@@ -131,6 +132,7 @@ struct  mne     mne[] = {
     {   NULL,   ".mdelete",     S_MACRO,        0,      O_MDEL  },
 
         /* Gameboy, a modified Z80 */
+    {   NULL,   ".tile",        S_TILE,         0,      0       },
 
     {   NULL,   "ld",           S_LD,           0,      0x40    },
 
